tests/snapshots/compile__character_primitives.snap
---
source: tests/compile.rs
expression: "dump(\"TEXT = DIGIT LETTER (ANY UNTILBEFORE DIGIT) (ANY UNTILBEFORE NL)\")"
---
nt0 rule `TEXT` (Rule(0)) start=s0
  s0
    -> s8 DIGIT
  s7 accept
  s8
    -> s9 LETTER
  s9
    -> s10 nt1
  s10
    -> s7 nt2
nt1 repetition (Rep { lazy: false, single: false }) start=s1
  s1
    -> s3 anything but DIGIT [Item]
    -> s2 at DIGIT
  s2 accept
  s3
    -> s3 anything but DIGIT [Item]
    -> s2 at DIGIT
nt2 repetition (Rep { lazy: false, single: false }) start=s4
  s4
    -> s6 anything but a line break [Item]
    -> s5 at a line break
  s5 accept
  s6
    -> s6 anything but a line break [Item]
    -> s5 at a line break
