tests/snapshots/compile__lazy_repetition.snap
---
source: tests/compile.rs
expression: "dump(\"TEXT = 0 TO n LAZY WORD\")"
---
nt0 rule `TEXT` (Rule(0)) start=s0
  s0
    -> s3 nt1
  s3 accept
nt1 repetition (Rep { lazy: true, single: false }) start=s1
  s1 accept(first)
    -> s2 WORD [Item]
  s2 accept(first)
    -> s2 WORD [Item]
